# kwami

./: .gitignore  .npmignore  .npmrc  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG-MIND-REFACTOR.md  CHANGELOG.md  CONTRIBUTING.md  ECOSYSTEM.md  FINAL_DEPLOYMENT_GUIDE.md  INTEGRATION_GUIDE.md  LICENSE  MEDIA_LOADER_GUIDE.md  MIND-REFACTOR-SUMMARY.md  PROJECT_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  SECURITY_AUDIT.md  URL_UPLOAD_SUMMARY.md  eslint.config.ts  index.ts  package-lock.json  package.json  pnpm-lock.yaml  sync-version.sh  tsconfig.json  vite.config.ts
.bkp/: CHANGELOG.md  README.md
.bkp/app/: CHANGELOG.md  eslint.config.mjs
.bkp/candy/: .env.sample
.bkp/dao/: index.html  tsconfig.app.json  vite.config.ts
.bkp/market/: package.json  tailwind.config.ts
.bkp/pg/: .prettierignore  CHANGELOG.md  package.json  playwright.config.ts
.bkp/scripts/: sync-version.js
.bkp/solana/kwami-nft/programs/: Cargo.toml
.bkp/solana/kwami-nft/programs/src/: lib.rs
.bkp/web/: .env.sample  .gitignore  .prettierignore  README.md  eslint.config.js  render.yaml  vite.config.ts  vitest.config.ts
.github/: MAINTAINERS.md  NPM_SETUP.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml
app/: .env.sample  CHANGELOG.md  README.md  app.config.ts  app.vue  index.html  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
app/composables/: useLangs.ts  useStore.ts
app/docker/: Dockerfile  Dockerfile.bun  Dockerfile.deno
app/locales/: en.ts
app/middleware/: auth.ts
app/pages/: index.vue
app/src/: main.ts  style.css  windowTest.ts
app/stores/: auth.ts  q.ts
app/types/: database.d.ts  db..d.ts  index.d.ts
backend/api/: .env.sample  .gitignore  Cargo.toml  DATABASE_SETUP.md  QUICKSTART.md  README.md
backend/api/migrations/: 20260114_000001_initial_schema.sql
backend/api/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/api/src/db/: mod.rs  models.rs  repositories.rs
backend/api/src/handlers/: auth.rs  docs.rs  livekit.rs  mod.rs
backend/api/src/models/: livekit.rs  mod.rs
backend/api/src/routes/: health.rs  livekit.rs  mod.rs
backend/api/src/services/: auth_service.rs  livekit_service.rs  mod.rs
backend/api/tests/: api_spec.rs
candy/: .env.sample  .npmrc  CHANGELOG.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  STATUS.md  index.html  nuxt.config.ts  package-lock.json  package.json  render.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  virtual-modules.d.ts  vite.config.ts
dao/: .env.sample  .npmrc  CHANGELOG.md  README.md  ecosystem.config.cjs  index.html  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
dao/app/: app.vue
docs/: AGENTS_API.md  ASSET_PATH_FIX.md  BACKGROUND_IMAGE_DEBUG.md  CONVERSATIONAL_AI.md  CONVERSATIONAL_QUICKSTART.md  CONVERSATIONS_API.md  CONVERSATION_BETA_GUIDE.md  DOCKER_DEPLOYMENT.md  ELEVENLABS_AGENTS_PLATFORM_GUIDE.md  ELEVENLABS_AGENT_URL_FORMATS.md  ELEVENLABS_CONVERSATION_API.md  ELEVENLABS_CONVERSATION_SETUP.md  ELEVENLABS_IFRAME_FIX.md  ELEVENLABS_INTEGRATION.md  GRADIENT_ENHANCEMENTS.md  MIGRATION.md  MIND_CLASS_IMPLEMENTATION.md  MIND_MENU_GUIDE.md  MIND_MENU_IMPLEMENTATION.md  MIND_MENU_QUICK_REFERENCE.md  QUICKSTART.md  README.md  SUMMARY.md  WEBSOCKET_CONVERSATION_GUIDE.md  mind-architecture-diagram.md  mind-playground-quickstart.md  mind-refactoring.md  nuxt.config.ts  package-lock.json  package.json
kwami/: .npmignore  ACTION_SYSTEM_IMPLEMENTATION.md  CHANGELOG.md  LICENSE  README.md  index.ts  package.json  tsconfig.json  vitest.config.ts
kwami.io/: README.md  SETUP_COMPLETE.md  WEBSOCKET_IMPLEMENTATION.md  app.config.ts  nuxt.config.ts
kwami.io/solana/anchor/qwami-token/programs/qwami-token/: Cargo.toml
market/: .env.sample  .gitignore  CHANGELOG.md  FEATURES.md  MARKETPLACE_INTEGRATION.md  README.md  index.html  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
pg/: .eslintrc.json  .gitignore  CHANGELOG.md  COMPLETED.md  Dockerfile  IMPLEMENTATION_SUMMARY.txt  IMPROVEMENTS.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  UPGRADE_GUIDE.md  agent-management-functions.js.bak  index.html  main.js  media-loader-ui.js  media-loading-manager.js  package.json  render.yaml  tsconfig.json  vite.config.js  vitest.config.ts
playground/: .env.sample  README.md  agent-management-functions.js  assets  index.html  main.js  media-loader-ui.js  media-loading-manager.js  styles.css  vite.config.js
scripts/: checkCanvasWidth.js  copy-assets.ts  download-video.js  sync-version.js
server/: .env.sample  Cargo.toml  SECURITY.md  test_api.sh
server/src/: auth.rs  config.rs  error.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs  state.rs
server/src/handlers/: auth.rs  health.rs
server/src/models/: mod.rs
server/src/routes/: mod.rs
server/src/services/: auth_service.rs  kwami_service.rs  mod.rs
server/tests/: api_spec.rs
solana/: CHANGELOG.md  COMPREHENSIVE_OVERVIEW.md  Cargo.toml  DOCUMENTATION_INDEX.md  IMPLEMENTATION_ROADMAP.md  KWAMI_SUPPLY_SCHEDULE.md  README.md  kwami-nft-devnet-addresses.json  package.json
solana/anchor/kwami/: Anchor.toml  Cargo.toml  devnet-addresses.json
solana/anchor/kwami/programs/kwami-nft/: Cargo.toml
solana/anchor/kwami/programs/kwami-nft/src/: lib.rs
solana/anchor/kwami/scripts/: initialize-kwami.ts  test-kwami-devnet.ts
solana/anchor/kwami/tests/: kwami-nft-economic.ts
solana/anchor/qwami/programs/qwami-token/: Cargo.toml
solana/anchor/qwami/programs/qwami-token/src/: lib.rs
src/: Kwami.ts  index.ts
web/: .env.sample  .eslintrc.json  CHANGELOG.md  COMPLETE.md  COMPLETED_PHASES.md  COMPLETION_SUMMARY.md  I18N_README.md  I18N_SUMMARY.md  IMPROVEMENTS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEST_REPORT.md  index.html  package-lock.json  package.json  render.yaml  test-kwami-version.html  translate_batch.js  translate_remaining.sh  tsconfig.json  vite.config.ts  vitest.config.ts
(+1268 files in other folders)
