[package]
name = "kwami-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT & Auth
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }

# Solana
solana-sdk = "=1.18.26"
solana-client = "=1.18.26"
solana-account-decoder = "=1.18.26"
spl-token = "=4.0.0"

# Encoding
bs58 = "0.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
