[package]
name = "kwami-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tower_governor = "0.4"
governor = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT & Auth
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }

# Solana
solana-sdk = "=1.18.26"
solana-client = "=1.18.26"
solana-account-decoder = "=1.18.26"
spl-token = "=4.0.0"

# Encoding
bs58 = "0.5"
borsh = "1.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Database - PostgreSQL
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }

# Database - Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Database - Qdrant
qdrant-client = "1.7"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
