[package]
name = "kwami-nft"
version = "0.1.0"
description = "Kwami NFT program with DNA-based uniqueness validation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kwami_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "1.13.1"

[dev-dependencies]
solana-program-test = "~1.17"
