[package]
name = "kwami-nft"
version = "0.1.0"
description = "Kwami NFT program with DNA-based uniqueness validation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kwami_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-instruction = { workspace = true }
solana-instructions-sysvar = { workspace = true }
solana-define-syscall = { workspace = true }
solana-curve25519 = { workspace = true }
subtle = { workspace = true }
spl-token-confidential-transfer-proof-generation = { workspace = true }
spl-token-confidential-transfer-proof-extraction = { workspace = true }

#[dev-dependencies]
#solana-program-test = "1.18.26"
