[package]
name = "qwami-token"
version = "0.1.0"
description = "QWAMI SPL Token - Integer token with 1 trillion supply, powering KWAMI AI ecosystem"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "qwami_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-instruction = { workspace = true }
solana-instructions-sysvar = { workspace = true }
solana-define-syscall = { workspace = true }
solana-curve25519 = { workspace = true }
subtle = { workspace = true }
spl-token-confidential-transfer-proof-generation = { workspace = true }
spl-token-confidential-transfer-proof-extraction = { workspace = true }

#[dev-dependencies]
#solana-program-test = "~1.17"
