[package]
name = "qwami-token"
version = "0.1.0"
description = "QWAMI SPL Token program with 1 trillion supply cap"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "qwami_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "~1.17"
